--- a/package.json
+++ b/package.json
@@ -2,17 +2,19 @@
   "name": "myportfolio",
   "version": "0.0.1",
   "description": "jahir alam raju portfolio",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
   "repository": {
     "type": "git",
-    "url": "?.git"
+    "url": "https://github.com/jahir9991/Portfolio.git"
   },
   "author": "Jahir Alam",
   "devDependencies": {
+    "browserify": "^13.0.0",
+    "classie": "^1.0.0",
     "gulp": "^3.9.0",
+    "gulp-browserify": "^0.5.1",
+    "gulp-coffee": "^2.3.1",
+    "gulp-compass": "^2.1.0",
+    "gulp-concat": "^2.6.0",
     "gulp-util": "^3.0.7"
   }
 }
