--- a/package.json
+++ b/package.json
@@ -15,6 +15,9 @@
     "gulp-coffee": "^2.3.1",
     "gulp-compass": "^2.1.0",
     "gulp-concat": "^2.6.0",
+    "gulp-connect": "^2.3.1",
+    "gulp-open": "^1.0.0",
+    "gulp-server-livereload": "^1.6.2",
     "gulp-util": "^3.0.7"
   }
 }
