--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "myportfolio",
   "version": "0.0.1",
   "description": "jahir alam raju portfolio",
+  "main":"index.html",
   "repository": {
     "type": "git",
     "url": "https://github.com/jahir9991/Portfolio.git"
